syntax = "proto2";

message Ballot {
	required int32 seq_n = 1;
	required int32 proc_id = 2;
    required int32 depth = 3;
}
		
message	Txn {
	required int32 sender = 1;
	required int32 receiver = 2;
    required int32 amount = 3;
}

message	MsgBlock {
	required string nonce = 1;
	required string hash = 2;
    repeated Txn tranxs = 3;
}

message	Prepare {
    required Ballot b_num = 1;
}

message	Promise {
    required Ballot b_num = 1;
    required Ballot ab_num = 2;
    required MsgBlock ablock = 3;
}

message	Accept {
    required int32 pid = 1;
	required Ballot b_num = 2;
    required MsgBlock block = 3;
}
		
message	Accepted {
    required Ballot b_num = 1;
    required MsgBlock block = 2;
}

message	Decide {
	required Ballot b_num = 1;
    required MsgBlock block = 2;
}

message WireMessage {
    required int32 type = 1;
    oneof oneOfMessage {
        Prepare prepare = 2;
        Promise promise = 3;
        Accept accept = 4;
        Accepted accepted = 5;
        Decide decide = 6;
    }
}
